cluster/apps/organizers/mylar/mylar-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mylar
  namespace: media
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: music
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`mylar.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: mylar
          port: 8090
  tls:
    secretName: ${SECRET_CERT}
